<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team7.sa43.gogulsell.CreatePost">


    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/itemName"
                android:id="@+id/labelItemName"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/category"
                android:id="@+id/labelCategory"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/price"
                android:id="@+id/labelPrice"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/contact"
                android:id="@+id/labelContact"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/description"
                android:id="@+id/labelDescription"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_gravity="top"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="0.5"/>
            </TableRow>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/buttonCall"/>
            <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/buttonCancel"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>
